--- a/sgpa/index.html
+++ b/sgpa/index.html
@@ -20,7 +20,7 @@
       --border-light: #e2e8f0;
     }
 
-    * { 
+    * {
       box-sizing: border-box;
       margin: 0;
       padding: 0;
@@ -133,17 +133,21 @@
       align-items: center;
       transition: all 0.2s ease;
       animation: slideIn 0.3s ease;
+      white-space: nowrap;
+    }
+
+    .input-group {
+      min-width: 0;
+    }
+
+    .input-group input,
+    .input-group select {
+      min-width: 0;
     }
 
     @keyframes slideIn {
-      from {
-        opacity: 0;
-        transform: translateY(-10px);
-      }
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
+      from { opacity: 0; transform: translateY(-10px); }
+      to { opacity: 1; transform: translateY(0); }
     }
 
     .subject-row:hover {
@@ -156,12 +160,6 @@
       color: var(--muted);
       text-align: center;
       font-size: 16px;
-    }
-
-    .input-group {
-      display: flex;
-      flex-direction: column;
-      gap: 4px;
     }
 
     .input-label {
@@ -183,6 +181,7 @@
       font-family: inherit;
       transition: all 0.2s ease;
       width: 100%;
+      min-width: 0;
     }
 
     input[type="number"]:focus,
@@ -198,13 +197,9 @@
       margin: 0;
     }
 
-    input[type="number"] {
-      -moz-appearance: textfield;
-    }
+    input[type="number"] { -moz-appearance: textfield; }
 
-    select {
-      cursor: pointer;
-    }
+    select { cursor: pointer; }
 
     select option {
       background: var(--card-bg);
@@ -238,9 +233,7 @@
       gap: 20px;
     }
 
-    .result-item {
-      text-align: center;
-    }
+    .result-item { text-align: center; }
 
     .result-label {
       font-size: 13px;
@@ -264,23 +257,8 @@
       background-clip: text;
     }
 
-    .result-value.danger {
-      color: var(--danger);
-    }
+    .result-value.danger { color: var(--danger); }
 
-    .empty-state {
-      text-align: center;
-      padding: 40px 20px;
-      color: var(--muted);
-    }
-
-    .empty-state i {
-      font-size: 48px;
-      margin-bottom: 16px;
-      opacity: 0.5;
-    }
-
-    /* Dark theme */
     body.dark {
       --bg: linear-gradient(135deg, #0f172a 0%, #1e293b 100%);
       --card-bg: #1e293b;
@@ -298,7 +276,6 @@
       --hover-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
     }
 
-    /* Light theme */
     body.light {
       --bg: #f1f5f9;
       --card-bg: #ffffff;
@@ -315,54 +292,6 @@
       --shadow: 0 10px 40px rgba(15, 23, 42, 0.08);
       --hover-shadow: 0 4px 12px rgba(15, 23, 42, 0.05);
     }
-
-    @media (max-width: 640px) {
-      .container {
-        padding: 24px 20px;
-      }
-
-      h1 {
-        font-size: 24px;
-      }
-
-      .subject-row {
-        grid-template-columns: 36px 1fr 44px;
-        grid-template-rows: auto auto;
-        gap: 12px;
-        padding: 14px;
-      }
-
-      .serial {
-        grid-row: 1;
-        grid-column: 1;
-        align-self: center;
-      }
-
-      .input-group:nth-of-type(1) {
-        grid-row: 1;
-        grid-column: 2;
-      }
-
-      .remove-btn {
-        grid-row: 1 / 3;
-        grid-column: 3;
-        align-self: center;
-      }
-
-      .input-group:nth-of-type(2) {
-        grid-row: 2;
-        grid-column: 1 / 3;
-      }
-
-      .results {
-        grid-template-columns: 1fr;
-        gap: 16px;
-      }
-
-      .result-value {
-        font-size: 28px;
-      }
-    }
   </style>
 </head>
 <body class="dark">
@@ -373,6 +302,7 @@
         <i class="bi bi-brightness-high"></i>
       </button>
     </div>
+
     <p class="subtitle">Add subjects, enter credits, and select grades to calculate your SGPA</p>
 
     <button id="addBtn" class="add-btn">
@@ -399,23 +329,23 @@
   </div>
 
   <script>
-    const gradePoints = { S: 10, A: 9, B: 8, C: 7, D: 6, E: 5, X: 0 };
-    const container = document.getElementById('subjectsContainer');
-    const addBtn = document.getElementById('addBtn');
-    const totalCreditsEl = document.getElementById('totalCredits');
-    const totalPointsEl = document.getElementById('totalPoints');
-    const sgpaEl = document.getElementById('sgpa');
-    const modeToggle = document.getElementById('modeToggle');
+    const gradePoints = { S: 10, A: 9, B: 8, C: 7, D: 6, E: 5, X: 0 }
+    const container = document.getElementById('subjectsContainer')
+    const addBtn = document.getElementById('addBtn')
+    const totalCreditsEl = document.getElementById('totalCredits')
+    const totalPointsEl = document.getElementById('totalPoints')
+    const sgpaEl = document.getElementById('sgpa')
+    const modeToggle = document.getElementById('modeToggle')
 
     function updateSerials() {
       Array.from(container.querySelectorAll('.subject-row')).forEach((row, i) => {
-        row.querySelector('.serial').textContent = i + 1;
-      });
+        row.querySelector('.serial').textContent = i + 1
+      })
     }
 
     function createRow() {
-      const row = document.createElement('div');
-      row.className = 'subject-row';
+      const row = document.createElement('div')
+      row.className = 'subject-row'
       row.innerHTML = `
         <div class="serial">1</div>
         <div class="input-group">
@@ -431,86 +361,80 @@
         <button class="remove-btn" title="Remove subject">
           <i class="bi bi-x-circle-fill"></i>
         </button>
-      `;
-      container.appendChild(row);
+      `
+      container.appendChild(row)
 
-      const creditsInput = row.querySelector('.credits');
-      const gradeSelect = row.querySelector('.grade');
-      const removeBtn = row.querySelector('.remove-btn');
+      const creditsInput = row.querySelector('.credits')
+      const gradeSelect = row.querySelector('.grade')
+      const removeBtn = row.querySelector('.remove-btn')
 
-      creditsInput.addEventListener('input', calculate);
-      gradeSelect.addEventListener('change', calculate);
+      creditsInput.addEventListener('input', calculate)
+      gradeSelect.addEventListener('change', calculate)
       removeBtn.addEventListener('click', () => {
-        row.style.animation = 'slideOut 0.3s ease';
+        row.style.animation = 'slideOut 0.3s ease'
         setTimeout(() => {
-          row.remove();
-          updateSerials();
-          calculate();
-        }, 300);
-      });
+          row.remove()
+          updateSerials()
+          calculate()
+        }, 300)
+      })
 
-      updateSerials();
-      calculate();
+      updateSerials()
+      calculate()
     }
 
     function calculate() {
-      let totalCredits = 0;
-      let totalPoints = 0;
-      let hasFail = false;
+      let totalCredits = 0
+      let totalPoints = 0
+      let hasFail = false
 
       container.querySelectorAll('.subject-row').forEach(row => {
-        const credits = parseFloat(row.querySelector('.credits').value) || 0;
-        const grade = row.querySelector('.grade').value;
-        const gp = gradePoints[grade];
+        const credits = parseFloat(row.querySelector('.credits').value) || 0
+        const grade = row.querySelector('.grade').value
+        const gp = gradePoints[grade]
 
         if (grade === 'X') {
-          hasFail = true;
+          hasFail = true
         } else {
-          totalCredits += credits;
-          totalPoints += credits * gp;
+          totalCredits += credits
+          totalPoints += credits * gp
         }
-      });
+      })
 
-      totalCreditsEl.textContent = totalCredits.toFixed(1);
-      totalPointsEl.textContent = totalPoints.toFixed(2);
+      totalCreditsEl.textContent = totalCredits.toFixed(1)
+      totalPointsEl.textContent = totalPoints.toFixed(2)
 
       if (hasFail) {
-        sgpaEl.textContent = 'FAIL';
-        sgpaEl.classList.add('danger');
-        sgpaEl.classList.remove('sgpa');
+        sgpaEl.textContent = 'FAIL'
+        sgpaEl.classList.add('danger')
+        sgpaEl.classList.remove('sgpa')
       } else {
-        const sgpa = totalCredits === 0 ? 0 : totalPoints / totalCredits;
-        sgpaEl.textContent = sgpa.toFixed(2);
-        sgpaEl.classList.remove('danger');
-        sgpaEl.classList.add('sgpa');
+        const sgpa = totalCredits === 0 ? 0 : totalPoints / totalCredits
+        sgpaEl.textContent = sgpa.toFixed(2)
+        sgpaEl.classList.remove('danger')
+        sgpaEl.classList.add('sgpa')
       }
     }
 
-    addBtn.addEventListener('click', createRow);
+    addBtn.addEventListener('click', createRow)
 
-    // Theme toggle
     modeToggle.addEventListener('click', () => {
-      const body = document.body;
-      body.classList.toggle('dark');
-      body.classList.toggle('light');
-      const icon = modeToggle.querySelector('i');
-      icon.className = body.classList.contains('light') ? 'bi bi-moon-fill' : 'bi bi-brightness-high';
-    });
+      const body = document.body
+      body.classList.toggle('dark')
+      body.classList.toggle('light')
+      const icon = modeToggle.querySelector('i')
+      icon.className = body.classList.contains('light') ? 'bi bi-moon-fill' : 'bi bi-brightness-high'
+    })
 
-    // Add slide out animation
-    const style = document.createElement('style');
+    const style = document.createElement('style')
     style.textContent = `
       @keyframes slideOut {
-        to {
-          opacity: 0;
-          transform: translateX(-20px);
-        }
+        to { opacity: 0; transform: translateX(-20px); }
       }
-    `;
-    document.head.appendChild(style);
+    `
+    document.head.appendChild(style)
 
-    // Initialize with one subject
-    createRow();
+    createRow()
   </script>
 </body>
 </html>
