--- a/sgpa/index.html
+++ b/sgpa/index.html
@@ -35,7 +35,7 @@
       max-width: 800px;
       background: var(--card-bg);
       border-radius: 20px;
-      padding: 28px;
+      padding: 24px;
       box-shadow: var(--shadow);
       position: relative;
     }
@@ -71,6 +71,16 @@
       margin-bottom: 8px;
     }
 
+    select {
+      background: var(--input-bg);
+      color: var(--text);
+    }
+
+    select option {
+      background: var(--card-bg);
+      color: var(--text);
+    }
+
     .subtitle {
       color: var(--muted);
       margin-bottom: 20px;
@@ -90,15 +100,17 @@
     .add-btn {
       background: var(--accent);
       color: white;
-      padding: 10px 20px;
+      padding: 10px 14px;
       border-radius: 10px;
-      margin-bottom: 16px;
       width: 100%;
       border: none;
       cursor: pointer;
       display: flex;
       justify-content: center;
       gap: 8px;
+      margin-top: 1rem;
+      max-width: 140px;
+      margin-left: auto;
     }
 
     .subject-row {
@@ -228,7 +240,6 @@
     </button>
     <h1>SGPA Calculator</h1>
     <p class="subtitle">Add subjects, select credits & grades, and calculate your SGPA</p>
-    <button id="addBtn" class="add-btn"><i class="bi bi-plus-circle"></i>Add Subject</button>
     <div class="subjects-header">
       <div>Subject</div>
       <div>Credits</div>
@@ -250,6 +261,7 @@
         <div id="sgpa" class="result-value sgpa">0.00</div>
       </div>
     </div>
+    <button id="addBtn" class="add-btn"><i class="bi bi-plus-circle"></i>Add Subject</button>
   </div>
   <script>
     // Theme toggle
