--- a/sgpa/index.html
+++ b/sgpa/index.html
@@ -108,7 +108,8 @@
       display: flex;
       justify-content: center;
       gap: 8px;
-      margin-top: 1rem;
+      margin-top: 14px;
+      margin-bottom: 12px;
       max-width: 140px;
       margin-left: auto;
     }
@@ -247,6 +248,7 @@
       <div></div>
     </div>
     <div id="subjectsContainer" class="subjects-container"></div>
+    <button id="addBtn" class="add-btn"><i class="bi bi-plus-circle"></i>Add Subject</button>
     <div class="results">
       <div>
         <div class="result-label">Total Credits</div>
@@ -261,7 +263,6 @@
         <div id="sgpa" class="result-value sgpa">0.00</div>
       </div>
     </div>
-    <button id="addBtn" class="add-btn"><i class="bi bi-plus-circle"></i>Add Subject</button>
   </div>
   <script>
     // Theme toggle
